@@ -3704,6 +3704,7 @@ sub set_defaults {
     $continue = 0;
     while ( $continue != 1 ) {
         print "Please select your IMAP server:\n";
+        print "    bincimap    = Binc IMAP server\n";
         print "    courier     = Courier IMAP server\n";
         print "    cyrus       = Cyrus IMAP server\n";
         print "    dovecot     = Dovecot Secure IMAP server\n";
@@ -3718,6 +3719,9 @@ sub set_defaults {
         print "Command >> ";
         $server = <STDIN>;
         $server =~ s/[\r\n]//g;
+
+        # variable is used to display additional messages.
+        $message = "";
 
         print "\n";
         if ( $server eq "cyrus" ) {
@@ -3837,6 +3841,24 @@ sub set_defaults {
             $disp_default_folder_prefix     = "<none>";
 
             $continue = 1;
+        } elsif ( $server eq "bincimap" ) {
+            $imap_server_type               = "bincimap";
+            $default_folder_prefix          = "INBOX/";
+            $trash_folder                   = "Trash";
+            $sent_folder                    = "Sent";
+            $draft_folder                   = "Drafts";
+            $show_prefix_option             = false;
+            $default_sub_of_inbox           = false;
+            $show_contain_subfolders_option = false;
+            $delete_folder                  = true;
+            $force_username_lowercase       = false;
+            $optional_delimiter             = "detect";
+            $disp_default_folder_prefix     = $default_folder_prefix;
+
+            # Default folder prefix depends on used depot.
+            $message = "\nIf you use IMAPdir depot, you must set default folder prefix to empty string.\n";
+
+            $continue = 1;
         } elsif ( $server eq "quit" ) {
             $continue = 1;
         } else {
@@ -3856,6 +3878,8 @@ sub set_defaults {
         print "            optional_delimiter = $optional_delimiter\n";
         print "                 delete_folder = $delete_folder\n";
         print "      force_username_lowercase = $force_username_lowercase\n";
+
+        print "$message";
     }
     print "\nPress enter to continue...";
     $tmp = <STDIN>;
